# testrail_py_wrapper

./: .gitignore  README.md  pyproject.toml
testrail_py_wrapper/: __init__.py  test_manager.py
testrail_py_wrapper/auth/: __init__.py  auth.py
testrail_py_wrapper/testrail_api/: __init__.py  api_client.py  testrail_api.py
testrail_py_wrapper/utils/: decorators.py
