[project]
name = "testrail-py-wrapper"
version = "0.1.0"
description = ""
authors = [
    {name = "l02",email = "l8556@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp (>=3.11.12,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
